--- a/samples/cssdemo/stylesheet.css
+++ b/samples/cssdemo/stylesheet.css
@@ -8,7 +8,7 @@ a:hover { background-color: #dbd4a6; }
 a.linkLocal   { color: #00ff00; } /* green */
 a.linkRemote  { color: #ff0000; } /* red  */
 
-.rowOdd		{background-color: #eeeeee; } /* E.g., for JSF datatables */
+.rowOdd		{background-color: #eeeeee; } /* E.g., for datatables */
 .rowEven	{background-color: #888888; }
 
 li.booklink { list-style-image: url('img/book.gif'); }
