--- a/sourcecode/ex61solution/.settings/org.eclipse.wst.common.component
+++ b/sourcecode/ex61solution/.settings/org.eclipse.wst.common.component
@@ -9,6 +9,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="datamodel-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/datamodel/datamodel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
                 
         <property name="context-root" value="ex61solution"/>
                 
