--- a/sourcecode/samples/.settings/org.eclipse.wst.common.component
+++ b/sourcecode/samples/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module archiveName="datamodel-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/datamodel/datamodel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="936-samples"/>
         <property name="java-output-path" value="/samples/target/classes"/>
     </wb-module>
