--- a/sourcecode/ex81solution/.settings/org.eclipse.wst.common.component
+++ b/sourcecode/ex81solution/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ex81solution">
+    <wb-module deploy-name="ex81solution-1.0.0-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <property name="context-root" value="ex81solution"/>
         <property name="java-output-path" value="/ex81solution/target/classes"/>
     </wb-module>
